2003-02-23	fabian
    * Changed version number to 0.6.4
    * Updated help files
    
2003-02-22	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed a bug in resizing tabs and window when closing 
      a session.
      
    * Using smaller icon for popup menu in toolbar when 
      toolbar size mode is NSToolbarSizeModeSmall.
      
    * Further speed optimizations by caching rarely changing 
      character attribute dictionaries. We are also not 
      recreating our data stream in VT100Terminal every 
      time we pick off a token. That is too expensive. 
      We just mark our position in the stream and recreate 
      the stream only when we reach the end.
      

2003-02-21	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Manually firing screen update timer after a keyDown 
      to make user input more responsive.
      
    * Fixed memory leak by properly releasing BUFFER in 
      VT100Screen: -dealloc. Also no need to retain 
      BUFFER after alloc and init.
      
    * Fixed bug in accessing characters in buffer while 
      marking autowrap position.
      

2003-02-21	fabian
    * Fixed a bug in function key mapping: F1~F12
    * Fixed a bug in showCursor. Cleaned overall cursor
      Code.
    * Fixed bugs related to color/font settings in buffer
    * Fixed a bug affecting CJK input
    * Perfromace improvement. Now a buffer is used in
      displaying the text. Significantly improve the
      overall speed. Need more test.
      
2003-02-20	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added and implemented tabViewWillPerformDragOperation 
      tabViewDidPerformDragOperation delegate methods. This 
      gets rid of a visual glitch when doing drag-n-drop 
      within a window with only two tabs.
      

2003-02-19	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added support for a few xterm character attributes.
    
    * Tabs are dragged only after about 8 pixels to prevent 
      accidental dragging.
    
